deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      nodeSelector:
        app-node: web

      containers:
        - name: nginx
          image: nginx:latest

          ports:
            - containerPort: 80

          volumeMounts:
            - name: persistent-storage
              mountPath: /usr/share/nginx/html

            - name: config
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: nginx-pvc

        - name: config
          configMap:
            name: nginx-config
